--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -24,7 +24,7 @@ th {
   color: white;
 }
 
-.table-horizon th{
+.table-vertical th{
 	padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
